# RTD-Dual-Alpha

./: .gitignore  CMakeLists.txt
src/: main.cpp  tga.h
